@@ -168,7 +168,9 @@ Todo now:
         mput cvs/*.gz *.zip *.bz2
  3. add files to SF files page (cut and paste changelog since last release)
  4. add SF news item to phpMyAdmin project
- 5. update the download page: /home/groups/p/ph/phpmyadmin/htdocs/home_page/downloads.php
+ 5. update web page:
+        - add MD5s and file sizes to /home/groups/p/ph/phpmyadmin/htdocs/home_page/md5.inc.php
+        - add release to /home/groups/p/ph/phpmyadmin/htdocs/home_page/config.inc.php
  6. announce release on freshmeat (http://freshmeat.net/projects/phpmyadmin/)
  7. send a short mail (with list of major changes) to
         phpmyadmin-devel@lists.sourceforge.net
@@ -181,8 +183,7 @@ Todo now:
               " <title>phpMyAdmin 2.2.2-rc1 - Documentation</title> "
               " <h1>phpMyAdmin 2.2.2-rc1 Documentation</h1> "
         - in translators.html
- 9. Add MD5s to /home/groups/p/ph/phpmyadmin/htdocs/home_page/md5.inc.php
-10. the end :-)
+ 9. the end :-)
 
 END
 
