@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-11-21 Michal Cihar  <nijel@users.sourceforge.net>
+    * scripts/create-release.sh: Udated information what is needed to change on
+      home page to currect status.
+
 2003-11-20 Alexander M. Turek  <rabus@users.sourceforge.net>
     * server_databases.php, server_processlist.php, server_status.php,
       server_variables.php: Removed some php 3 / MySQL 3.21 compatibility code.
